Helm: Automount Init Container Resources
[ upstream commit 2c7c69d4189a39167e9225d8e8ad703fdf162964 ]

[ backporter's note: Regenerate helm-value docs and fix minor conflict
  in the word list. ]

This patch adds the option to configure the resources of the init container
automounting the cgroups.

Signed-off-by: Sven Haardiek <sven.haardiek@uni-muenster.de>
Signed-off-by: Yutaro Hayakawa <yutaro.hayakawa@isovalent.com>

--- a/install/kubernetes/cilium/templates/cilium-agent/daemonset.yaml
+++ b/install/kubernetes/cilium/templates/cilium-agent/daemonset.yaml
@@ -433,6 +433,10 @@ spec:
           value: {{ .Values.cgroup.hostRoot }}
         - name: BIN_PATH
           value: {{ .Values.cni.binPath }}
+        {{- with .Values.cgroup.autoMount.resources }}
+        resources:
+          {{- toYaml . | trim | nindent 10 }}
+        {{- end }}
         command:
         - sh
         - -ec
