--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -55,6 +55,17 @@ serviceAccounts:
     name: cilium
     automount: true
     annotations: {}
+  nodeinit:
+    create: true
+    # -- Enabled is temporary until https://github.com/cilium/cilium-cli/issues/1396 is implemented.
+    # Cilium CLI doesn't create the SAs for node-init, thus the workaround. Helm is not affected by
+    # this issue. Name and automount can be configured, if enabled is set to true. 
+    # Otherwise, they are ignored. Enabled can be removed once the issue is fixed.
+    # Cilium-nodeinit DS must also be fixed. 
+    enabled: false
+    name: cilium-nodeinit
+    automount: true
+    annotations: {}
   etcd:
     create: true
     name: cilium-etcd-operator
@@ -1369,7 +1380,6 @@ hubble:
       #    hosts:
       #      - chart-example.local
 
-
 # -- Method to use for identity allocation (`crd` or `kvstore`).
 identityAllocationMode: "crd"
 
@@ -1496,7 +1506,6 @@ localRedirectPolicy: false
 
 # -- Enables periodic logging of system load
 logSystemLoad: false
-
 
 # -- Configure maglev consistent hashing
 maglev: {}
@@ -2075,6 +2084,12 @@ nodeinit:
 
   # -- Additional nodeinit environment variables.
   extraEnv: []
+
+  # -- Additional nodeinit volumes.
+  extraVolumes: []
+
+  # -- Additional nodeinit volumeMounts.
+  extraVolumeMounts: []
 
   # -- Affinity for cilium-nodeinit
   affinity: {}
