--- a/.github/workflows/lint-bpf-checks.yaml
+++ b/.github/workflows/lint-bpf-checks.yaml
@@ -101,6 +101,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
         with:
+          # renovate: datasource=golang-version depName=go
           go-version: 1.19.4
       - name: Cache LLVM and Clang
         id: cache-llvm
@@ -138,6 +139,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
         with:
+          # renovate: datasource=golang-version depName=go
           go-version: 1.19.4
       - name: Cache LLVM and Clang
         id: cache-llvm
