loader: Unexport functions and types where possible
Most of the functions and types in the loader package are only used
internally. This commit unexports them. Some functions were placed in
the loader package but without much added benefit.

These changes make it easier to identify the API boundary of the loader
package.

Signed-off-by: Dylan Reimerink <dylan.reimerink@isovalent.com>

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -141,7 +141,7 @@ endif
 # ROOT_DIR can be either `../` or absolute path, each of these need to be stripped
 BPF_SRCFILES := $(filter-out $(BPF_SRCFILES_IGNORE),$(subst ../,,$(subst $(ROOT_DIR)/,,$(BPF_SRCFILES))))
 CILIUM_DATAPATH_SHA256=$(shell cd $(ROOT_DIR); cat $(BPF_SRCFILES) | sha256sum | awk '{print $$1}')
-GO_BUILD_LDFLAGS += -X "github.com/cilium/cilium/pkg/datapath/loader.DatapathSHA256=$(CILIUM_DATAPATH_SHA256)"
+GO_BUILD_LDFLAGS += -X "github.com/cilium/cilium/pkg/datapath/loader.datapathSHA256=$(CILIUM_DATAPATH_SHA256)"
 
 GO_BUILD_FLAGS += -mod=vendor
 GO_TEST_FLAGS += -mod=vendor -vet=all
