Enable hubble and monitoring for agent, operator and hubble

--- a/install/kubernetes/cilium/templates/hubble-relay/networkpolicy.yaml
+++ b/install/kubernetes/cilium/templates/hubble-relay/networkpolicy.yaml
@@ -11,6 +11,7 @@ spec:
   ingress:
     - ports:
         - port: {{ .Values.hubble.relay.listenPort }}
+        - port: {{ .Values.hubble.relay.prometheus.port }}
   egress:
     - {}
   podSelector:
