--- a/install/kubernetes/cilium/templates/cilium-agent/service.yaml
+++ b/install/kubernetes/cilium/templates/cilium-agent/service.yaml
@@ -48,6 +48,10 @@ spec:
   selector:
     k8s-app: cilium
   ports:
+  - name: metrics
+    port: {{ .Values.prometheus.port }}
+    protocol: TCP
+    targetPort: prometheus
   - name: envoy-metrics
     port: {{ .Values.proxy.prometheus.port | default .Values.envoy.prometheus.port }}
     protocol: TCP
