--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -1349,7 +1349,9 @@ hubble:
       image:
         override: ~
         repository: "giantswarm/hubble-ui-backend"
-        tag: "v0.12.1@sha256:1f86f3400827a0451e6332262467f894eeb7caf0eb8779bd951e2caa9d027cbe"
+        tag: "v0.12.1"
+        digest: "sha256:1f86f3400827a0451e6332262467f894eeb7caf0eb8779bd951e2caa9d027cbe"
+        useDigest: false
         pullPolicy: "IfNotPresent"
 
       # -- Hubble-ui backend security context.
