--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -1380,7 +1380,9 @@ hubble:
       image:
         override: ~
         repository: "giantswarm/hubble-ui"
-        tag: "v0.12.1@sha256:9e5f81ee747866480ea1ac4630eb6975ff9227f9782b7c93919c081c33f38267"
+        tag: "v0.12.1"
+        digest: "sha256:9e5f81ee747866480ea1ac4630eb6975ff9227f9782b7c93919c081c33f38267"
+        useDigest: false
         pullPolicy: "IfNotPresent"
 
       # -- Hubble-ui frontend security context.
